renamed Category.Categoty to Category.Name
